Fix twitter redisplay, and vcollapser
oldDiv.detach was correct, since those divs are saved in rp.cache.
mobile button number sizing is now 36px square, desktop is 30px.
vcollapsers are now fixed in possition directly below hcollapsers.
This last fixes the issue of the duplicates collapser wandering up and
down depending on title height, and other factors.

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,6 +7,7 @@
     margin-right: 14px;
 }
 
+
 #controlsDiv a:before {
     font-size: 24px;
     margin-top: -2px;
@@ -36,6 +37,14 @@
 }
 
 /* 4 rows of number visible */
+.numberButtonList li {
+    width: 30px;
+    height: 30px;
+}
+
+.numberButtonList {
+    width: 440px;
+}
 .numberButton {
     font-size: 12px;
 }
