--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,6 +7,7 @@
 }
 
 .material-icons { font-size: 36px; }
+
 #controlsDiv a:before {
     font-size: 36px;
 }
@@ -36,6 +37,14 @@
 }
 
 /* 3 rows of number visible */
+.numberButtonList li {
+    width: 36px;
+    height: 36px;
+}
+
+.numberButtonList {
+    width: 450px;
+}
 .numberButton {
     font-size: 16px;
 }
