--- a/css/style.css
+++ b/css/style.css
@@ -187,10 +187,16 @@ a.failed { text-decoration: line-through; }
 }
 
 #controlsDiv {position: absolute; bottom: 0; left: 0; }
-#titleDiv { position: absolute; top: 0; left: 0; right: 0; }
+#titleDiv { position: absolute; top: 0; left: 0; right: 0; min-height: 60px; }
 #duplicates { position: relative; top: 0; left: 0; right: 0; overflow: auto; }
 #duplicates ul { display: inline; }
 #subredditUrl { border: 1px dashed; background-color: black; color: white; }
+
+.vcollapser {
+    position: absolute;
+    top: 30px;
+    right: 0px;
+}
 
 .title { padding: 2px; font-weight: bold; font-size: 20px; min-height: 26px; }
 h3 { padding: 2px; font-weight: bold; font-size: 16px; }
